--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.cabecalho{
+    background-color: yellow;
+    width: 100%;
+    height: 130px;
+}
