--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,31 @@
     font-family: "Darker Grotesque", sans-serif;
 }
 
+/************CABECALHO*************/
 .cabecalho{
-    background-color: yellow;
+
+    background-color: #85CDF5;
     width: 100%;
     height: 130px;
+    padding: 10px 30px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
 }
 
+.cabecalho_texto{
 
+    text-wrap: nowrap;
+    text-decoration: none;
+    font-size: 2rem;
+}
 
-
+.cabecalho_icone{
+    width: 96px;
+    height: 111px;
+}
 
 
 
