refactor: trocando weight font

--- a/styles.css
+++ b/styles.css
@@ -31,17 +31,8 @@
 .cabecalho_icone{
     width: 96px;
     height: 111px;
+    font-weight: 700;
 }
-
-
-
-
-
-
-
-
-
-
 
 .caixa_lobo {
     width: 1000px;
