--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,14 @@
     text-wrap: nowrap;
     text-decoration: none;
     font-size: 2rem;
+    font-weight: 600;
+    color: #333333;
+    ;
 }
 
 .cabecalho_icone{
     width: 96px;
     height: 111px;
-    font-weight: 700;
 }
 
 .caixa_lobo {
