--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,33 @@
     font-size: 2rem;
     font-weight: 600;
     color: #333333;
-    ;
 }
 
 .cabecalho_icone{
+
     width: 96px;
     height: 111px;
 }
+
+.cabecalho_texto::after{
+    display: block;
+    content:"";
+    width: 0%;
+    height: 4px;
+    background-color: #333333;
+    bottom: 0;
+    left: 0;
+    transition: 0.5s ease-in-out;
+}
+.cabecalho_texto:hover::after{
+    width: 100%;
+}
+
+
+
+
+
+
 
 .caixa_lobo {
     width: 1000px;
