--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 }
 
 /************CABECALHO*************/
-.cabecalho{
 
     background-color: #85CDF5;
     width: 100%;
@@ -52,9 +51,16 @@
 
 
 
+/*CAIXA LOBO INVERTIDO*/
+.invertida {
+    flex-direction: row-reverse;
+    direction: rtl;
+}
 
-
-
+.img_lobo_invertida {
+    right: 33px;
+}
+/**/
 
 .caixa_lobo {
     width: 1000px;
@@ -64,6 +70,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 50px;
 }
 
 .background_img_lobo {
@@ -77,11 +84,11 @@
     position: relative;
     top: 33px;
     left: 33px;
-    background-image: url('assets/lobo-teste.png');
     background-size: cover;
     width: 430px;
     height: 328px;
 }
+
 
 .dados_lobo {
     display: flex;
@@ -94,6 +101,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 33px;
+    margin-bottom: 20px;
 }
 
 .nome_lobo {
@@ -104,16 +112,19 @@
 .btn_adotar {
     font-size: 36px;
     font-weight: 500;
-    border: none;
     background: #DEB959;
     color: white;
-    padding: 2px 22px 6px;
+    padding: 2px 28px;
+    max-height: 60px;
+}
+
+.adotado {
+    background: #7AAC3A;
 }
 
 .idade_lobo {
     font-size: 20px;
     position: relative;
-    bottom: 10px;
 }
 
 .descricao_lobo {
