--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,3 +132,119 @@
     font-weight: 500;
     line-height: 20px;
 }
+
+.footer {
+    display: flex;
+    width: 100vw;
+    height: 275px;
+    background-color: #333333;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+.left_sub_footer {
+    display: flex;
+    width: 660px;
+    justify-content: space-between;
+    margin-top: 51px;
+    margin-left: 219px;
+}
+
+.right_sub_footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 51px;
+    margin-right: 221px;
+    align-items: center;
+    gap: 8px;
+}
+
+.icons {
+    width: 20px;
+    height: 20px;
+}
+
+.footer_descricao {
+    max-width: 378px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 16px;
+    margin-bottom: 20px;
+    
+}
+.contato {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 168px;
+    width: 378px;
+}
+
+.footer_text {
+    line-height: 15px;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+}
+
+.footer_button {
+    display: flex;
+    background-color: #DEB959;
+    color: #353535;
+    width: 144px;
+    height: 30px;
+    margin-top: 0px;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 20px;
+    align-items: center;
+    justify-content: center;
+    border: 0;
+}
+
+.gradient_line {
+    width: 100vw;
+    height: 5px;
+    background: linear-gradient(270deg, #2C5680 0%, #DEB959 100%);
+}
+
+.main_footer {
+    bottom: 0;
+}
+
+.middle_section {
+    display: flex;
+    flex-direction: column;
+    height: 340px;
+    width: 100vw;
+    background-color: white;
+}
+
+.title_quem_somos {
+    display: flex;
+    font-family: "Roboto", "serif";
+    font-size: 48px;
+    line-height: 56.25px;
+    justify-content: center;
+    width: 100vw;
+    height: 56px;
+    margin-top: 50px;
+}
+
+.text_quem_somos {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 134px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.main_text {
+    width: 960px;
+    height: 134px;
+    font-size: 24px;
+    line-height: 32.54px;
+    letter-spacing: 4px;
+
+}
