--- a/assets/css/adotar_lobinho.css
+++ b/assets/css/adotar_lobinho.css
@@ -27,10 +27,6 @@
     margin-right: 100px;
 }
 
-.text_adotar_lobo {
-    display: block;
-}
-
 .id_lobo {
     display: flex;
     font-size: 14px;
@@ -40,3 +36,74 @@
 }
 
 /* FORMULÁRIO DE ADOÇÃO */
+
+label {
+    font-size: 30px;
+    line-height: 40.68px;
+    display: flex;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    width: 100vw;
+}
+
+input {
+    border-top: 0;
+    border-left: 0;
+    font-size: 24px;
+    border-right: 0;
+    height: 42px;
+    border-color: grey;
+}
+
+.form_nome {
+    width: 868px;
+}
+
+.nome_e_idade {
+    display: flex;
+    gap: 20px;
+}
+
+.form_idade {
+    width: 72px;
+}
+
+.form_email {
+    width: 960px;
+}
+
+.form_completo {
+    width: 960px;
+    height: fit-content;
+}
+
+.container_email {
+    display: block;
+    width: 960px;
+}
+
+/* BOTÃO DE ADOTAR */
+.container_btn_adotar {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.btn_adotar {
+    font-family: "Darker Grotesque", "serif";
+    font-weight: 600;
+    width: 209px;
+    height: 60px;
+    border-radius: 0;
+    font-size: 36px;
+    line-height: 49px;
+    color: white;
+    background: #2C5680;
+    border: 1px solid #333333;
+}
