--- a/assets/css/testesessao4.css
+++ b/assets/css/testesessao4.css
@@ -1,10 +1,9 @@
 .banner_4{
-    background-color: aqua;
+    background-color: #FAFAFA;
 }
 
 .wrapper_4{
 
-    background-color: blueviolet;
     width: 100%;
     min-width: 789px;
     height: auto;
@@ -17,7 +16,6 @@
 
 .titulo_secao_4{
 
-    background-color: black;
     color: #DEB959;
     font-size: 48px;
     text-align: center;
@@ -28,7 +26,6 @@
 /**********Exemplo Lobo Normal**********/
 .exemplo_lobo{
 
-    background-color: aquamarine;
     width: 995px;
     display: flex;
     flex-direction: row;
@@ -40,7 +37,6 @@
 
     width: 512px;
     height: 361px;
-    background-color: coral;
     position: relative;
 }
 
@@ -66,7 +62,6 @@
 .informacoes_lobo_normal{
     width: 461px;
     height: 339px;
-    background-color: crimson;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
@@ -91,7 +86,6 @@
 /******************LOBO INVERTIDO*******************/
 .exemplo_lobo_invertido{
     
-    background-color:chartreuse;
     width: 995px;
     margin-top: 71px;
     display: flex;
@@ -104,7 +98,6 @@
     
     width: 512px;
     height: 361px;
-    background-color: coral;
     position: relative;
 }
 
@@ -130,7 +123,6 @@
 .informacoes_lobo_invertido{
     width: 461px;
     height: 339px;
-    background-color: crimson;
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
