--- a/assets/css/show_lobinho.css
+++ b/assets/css/show_lobinho.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: aqua;
 }
 
 .wrapper{
@@ -12,7 +11,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: blue;
     column-gap: 40px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -26,7 +24,6 @@
 .lobo_escolhido{
     width: 1001px;
     height: 530px;
-    background-color: blueviolet;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -35,7 +32,6 @@
 }
 
 .imagem_lobo_escolhido{
-    background-color: coral;
     width: 512px;
     height: 361px;
     position: relative;
@@ -58,6 +54,7 @@
     bottom: 33px;
     left: 0px;
     background-color: #2C5680;
+    border:4px solid #333333;
 }
 
 .botoes{
@@ -72,6 +69,7 @@
     color: #fafafa;
     border: none;
     cursor: pointer;
+    font-weight: bold;
     width: 180px;
     height: 56px;
 }
@@ -86,7 +84,6 @@
 }
 
 .informacoes_lobo_escolhido{
-    background-color: darkorange;
     width: 478px;
     height: 497px;
     display: flex;
@@ -100,4 +97,8 @@
 .descricao_lobo_escolhido{
     font-size: 24px;
     line-height: 20px;
+}
+
+.gradient_line, .footer{
+    width: 100%;
 }
