--- a/assets/css/quem_somos.css
+++ b/assets/css/quem_somos.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-html {
-    background-color: #333333;
-}
 .footer {
     display: flex;
-    width: 100vw;
-    height: 275px;
     background-color: #333333;
     justify-content: space-between;
-    overflow: hidden;
+}
+
+.main_footer {
+    display: flex;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    flex-direction: column;
 }
 
 .left_sub_footer {
@@ -77,11 +79,6 @@ html {
     height: 5px;
     background: linear-gradient(270deg, #2C5680 0%, #DEB959 100%);
 }
-
-.main_footer {
-    bottom: 0;
-}
-
 .middle_section {
     display: flex;
     flex-direction: column;
