--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,6 @@
     height: 111px;
 }
 
-/*****VER SE VALE A PENA*********/
 .cabecalho_icone:hover{
     transform: scale(1.1);
     transition: 0.5s ease-in-out;
@@ -56,6 +55,7 @@
     width: 100%;
 }
 
+/* FOOTER */
 .footer {
     display: flex;
     width: 100vw;
@@ -63,6 +63,17 @@
     background-color: #333333;
     justify-content: space-between;
     overflow: hidden;
+}
+
+.gradient_line {
+    width: 100vw;
+    height: 5px;
+    background: linear-gradient(270deg, #2C5680 0%, #DEB959 100%);
+}
+
+.main_footer {
+    bottom: 0;
+    position: absolute;
 }
 
 .left_sub_footer {
@@ -125,18 +136,9 @@
     border: 0;
 }
 
-.gradient_line {
-    width: 100vw;
-    height: 5px;
-    background: linear-gradient(270deg, #2C5680 0%, #DEB959 100%);
-}
-
-.main_footer {
-    bottom: 0;
-}
-
 .middle_section {
     display: flex;
+    flex: 1;
     flex-direction: column;
     height: 340px;
     width: 100vw;
