--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,11 +71,6 @@
     background: linear-gradient(270deg, #2C5680 0%, #DEB959 100%);
 }
 
-.main_footer {
-    bottom: 0;
-    position: absolute;
-}
-
 .left_sub_footer {
     display: flex;
     width: 660px;
@@ -171,4 +166,15 @@
     font-size: 24px;
     line-height: 32.54px;
     letter-spacing: 4px;
+}
+
+/* TESTE */
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+.middle_section {
+    flex-grow: 1;
 }
