--- a/assets/css/listar_lobinho.css
+++ b/assets/css/listar_lobinho.css
@@ -142,6 +142,12 @@
      font-weight: 500;
      line-height: 20px;
  }
+
+ .caixa_dono {
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 21px;
+ }
  
  .lobos_container {
      width: 100%;
