--- a/assets/css/listar_lobinho.css
+++ b/assets/css/listar_lobinho.css
@@ -4,6 +4,10 @@
      box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .filtrar_procura {
      width: 100%;
      display: flex;
