--- a/assets/css/listar_lobinho.css
+++ b/assets/css/listar_lobinho.css
@@ -64,6 +64,7 @@ body {
      line-height: 32.54px;
  }
  
+ 
  /*CAIXA LOBO INVERTIDO*/
  .invertida {
      flex-direction: row-reverse;
@@ -154,6 +155,7 @@ body {
  }
  
  .lobos_container {
+     min-height: 147px;
      width: 100%;
      display: flex;
      justify-content: center;
