--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -226,7 +226,7 @@
     width: 461px;
     height: 339px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-direction: column;
     position: absolute;
     right: 0;
@@ -288,7 +288,7 @@
     width: 461px;
     height: 339px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-direction: column;
     position: absolute;
     left: 0;
