--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Darker Grotesque", sans-serif;
+    text-decoration: none;
 }
 
 /************CABECALHO*************/
