--- a/assets/css/listar_lobinho.css
+++ b/assets/css/listar_lobinho.css
@@ -79,8 +79,7 @@ body {
  .caixa_lobo {
      width: 1000px;
      max-width: 1000px;
-     min-height: 361px;
-     max-height: 361px;
+     flex-grow: 1;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
