--- a/assets/css/listar_lobinho.css
+++ b/assets/css/listar_lobinho.css
@@ -79,7 +79,6 @@ body {
  .caixa_lobo {
      width: 1000px;
      max-width: 1000px;
-     flex-grow: 1;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
@@ -154,7 +153,7 @@ body {
  }
  
  .lobos_container {
-     min-height: 147px;
+     min-height: 40vh;
      width: 100%;
      display: flex;
      justify-content: center;
